--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,24 @@
-### AL ###
-#Template for AL projects for Dynamics 365 Business Central
-#launch.json folder
-.vscode/
-#Cache folder
-.alcache/
-#Symbols folder
-.alpackages/
-#Snapshots folder
-.snapshots/
-#Testing Output folder
-.output/
-#Extension App-file
-*.app
-#Rapid Application Development File
-rad.json
-#Translation Base-file
-*.g.xlf
-#License-file
-*.flf
-#Test results file
-TestResults.xml
+# Fichiers JetBrains/WebStorm
+.idea/
+*.iml
+
+# Logs
+*.log
+
+# Node.js / npm
+node_modules/
+npm-debug.log
+yarn-error.log
+yarn-debug.log
+
+# Build / dist / production
+dist/
+build/
+out/
+
+# Système
+.DS_Store
+Thumbs.db
+
+# Environnement
+.env
